# varTT

./: .gitignore  CMakeLists.txt  README.md  tensor.cpp  tensor.h  utils.cpp  utils.h  vartt.pro  vartt_suite.pro
examples/ex10_ignacio/: CMakeLists.txt  main.cpp
examples/ex11_irlm/: CMakeLists.txt  ham_irlm.h  irlm.h  main.cpp
examples/ex1_tensor/: main.cpp
examples/ex2_mpo/: main.cpp
examples/ex3_dmrg_tb/: main.cpp
examples/ex3_dmrg_tb/gprof/: a.out  analysis.txt  gmon.out  run.sh
examples/ex4_dmrg_cv_imp/: ex4_dmrg_cv_imp.pro  main.cpp
examples/ex5_dmrg_hall/: CMakeLists.txt  ex5_dmrg_hall.pro  freefermions.cpp  freefermions.h  hamhall.h  main.cpp
examples/ex6_dmrg_cv_hernan/: main.cpp
examples/ex7_dmrg_cv_aligia/: cadenitaaa.h  ex7_dmrg_cv_aligia.pro  main.cpp
examples/ex8_dmrg_cv_dmft/: ex8_dmrg_cv_dmft.pro  hamnn.h  main.cpp
examples/ex9_dmrg_imp/: main.cpp  plotSq.gnuplot
notebook/: cc_irlm_L100.txt  example.ipynb  example_fermionic.ipynb  example_irlm.ipynb  example_irlm_NO.ipynb  example_irlm_star.ipynb  example_irlm_tb.ipynb
python/: CMakeLists.txt  vartt.cpp
src/: CMakeLists.txt  cg.h  correctionvector.h  dmrg.h  dmrg1_gs.h  dmrg1_jd_gs.h  dmrg1_res_gs.h  dmrg1_wse_gs.h  dmrg_0_gs.h  dmrg_0_jd_gs.h  dmrg_gs.cpp  dmrg_gs.h  dmrg_jacobi_davidson_gs.h  dmrg_jd_gs.h  dmrg_krylov_gs.h  dmrg_oe_gs.cpp  dmrg_oe_gs.h  dmrg_res_cv.h  dmrg_res_gs.h  dmrg_se_gs.cpp  dmrg_se_gs.h  dmrg_wse_gs.cpp  dmrg_wse_gs.h  gmres.h  gmres_m.h  index.cpp  index.h  krylovdecomp.h  lanczos.h  lanczoscv.h  matrix.cpp  mps.cpp  mps.h  parameters.cpp  parameters.h  spectrawrapper.h  superblock.cpp  superblock.h  superblock_corr.h  supertensor.cpp  (+6 more)
src/model/: fermionic.h
tests/: test_dmrg_0_tb.cpp  test_dmrg_res_tb.cpp  test_dmrg_tb.cpp  test_dmrg_tight_binding.cpp  test_main.cpp  test_mpo.cpp  test_mps.cpp  test_superblock.cpp  test_tensor.cpp  test_tensor_notation.cpp  tests.pro
